회원관리 커밋

--- a/withpet/src/main/webapp/resources/css/sh.css
+++ b/withpet/src/main/webapp/resources/css/sh.css
@@ -1,4 +1,13 @@
 @import url(http://fonts.googleapis.com/earlyaccess/jejugothic.css);
 *{font-family: 'Jeju Gothic', serif;}
 
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
 
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
